# ChallengeGenericRelation

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pr_agent.yml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/management/commands/: generate_dummy_data.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_detail_unoptimized.html  blog_form.html  blog_list.html  blog_list_unoptimized.html  comment_confirm_delete.html  comment_form.html  comparison_dashboard.html
config/: settings.py  urls.py
tests/: test_blog.py
