[project]
name = "django-in-production-07"
version = "0.1.0"
description = "django-in-production 7章"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "typing-extensions>=4.14.0",
]

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
testpaths = ["tests"]
